rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-08578505be3f8c28.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-08578505be3f8c28: two-arrows.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-08578505be3f8c28.d: two-arrows.rs

two-arrows.rs:
